# DeliveryBackend

./: .gitignore  .gitmodules  BUILD.bazel  README.md  WORKSPACE
client/: BUILD.bazel  main.go
proto/: .gitignore  README.md
proto/common/: BUILD.bazel  common.proto
proto/location/: BUILD.bazel  service.proto
proto/payment/: BUILD.bazel  service.proto
proto/restaurant/: BUILD.bazel  restaurant.proto  service.proto
scripts/: ON_VM_deploy_food_grpc_server.sh  api_config.yaml  deploy_endpoints_service.sh  deploy_server.sh  generate_buildfiles_and_build.sh  send_push_notification.py  test_server.sh
scripts/push_notification/: BUILD.bazel  main.go
server/: BUILD.bazel  main.go
server/gcloud/: BUILD.bazel  gcloud.go
server/location/: BUILD.bazel  grpc.go
server/messaging/: BUILD.bazel  grpc.go  grpc_test.go
server/payment/: BUILD.bazel  grpc.go
server/restaurant/: BUILD.bazel  grpc.go  restaurant.go
