load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "fda/server",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/location",
        "//proto/payment",
        "//proto/restaurant",
        "//server/location",
        "//server/payment",
        "//server/restaurant",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "docker_server",
    binary = ":server",
)
